@@ -1,0 +1,56 @@
+.\" Copyright (c) 1994, 1996, 1997
+.\"	The Regents of the University of California.  All rights reserved.
+.\"
+.\" Redistribution and use in source and binary forms, with or without
+.\" modification, are permitted provided that: (1) source code distributions
+.\" retain the above copyright notice and this paragraph in its entirety, (2)
+.\" distributions including binary code include the above copyright notice and
+.\" this paragraph in its entirety in the documentation or other materials
+.\" provided with the distribution, and (3) all advertising materials mentioning
+.\" features or use of this software display the following acknowledgement:
+.\" ``This product includes software developed by the University of California,
+.\" Lawrence Berkeley Laboratory and its contributors.'' Neither the name of
+.\" the University nor the names of its contributors may be used to endorse
+.\" or promote products derived from this software without specific prior
+.\" written permission.
+.\" THIS SOFTWARE IS PROVIDED ``AS IS'' AND WITHOUT ANY EXPRESS OR IMPLIED
+.\" WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED WARRANTIES OF
+.\" MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
+.\"
+.TH PCAP_SET_CONTROL_KEEPALIVE 3PCAP "20 September 2022"
+.SH NAME
+pcap_set_control_keepalive \- set the keepalives parameters on a rpcap control socket.
+.SH SYNOPSIS
+.nf
+.ft B
+#include <pcap/pcap.h>
+.LP
+.ft B
+int pcap_set_control_keepalive(pcap_t *p, int enable, int keepcnt, int keepidle, int keepintvl)
+.ft
+.fi
+.SH DESCRIPTION
+.BR pcap_set_control_keepalive ()
+set the keepalives parameters on the control socket.
+The arguments
+.I keepcnt
+,
+.I keepidle
+, and
+.I keepintvl
+are used to set the corresponding tcp options. Respectively
+.B TCP_KEEPCNT
+(The maximum number of keepalive probes TCP should send before dropping the connection), 
+.B TCP_KEEPIDLE
+(The time in seconds the connection needs to remain idle before TCP starts sending keepalive probes), and
+.B TCP_KEEPINTVL
+(The time in seconds between individual keepalive probes).
+.SH RETURN VALUE
+.BR pcap_set_control_keepalive ()
+returns
+.B 0
+on success or
+.B PCAP_ERROR
+if we failed to set the socket options.
+.SH SEE ALSO
+.BR pcap (3PCAP),
